# StudySpark

./: Architecture Plan  Architecture.md  LICENSE  README  README.md  StudySpark.py  Technical Report  - Technology Stack & Justification  Technical Report - Architecture Plan  env-example  pyproject.toml
.devcontainer/: devcontainer.json
StudySpark_Project/: .env  .gitignore  README  StudySpark.py  pyproject.toml  stramlit_ui.py
StudySpark_Project/pages/: 1_Document_Upload.py  2_Summary.py  3_QA.py  4_Quiz.py
StudySpark_Project/services/: AIService.py  ai_service.py  pdf_processing_service.py
StudySpark_Project/utils/: lang_tracing.py
pages/: 1_Document_Upload.py  2_Summary.py  3_QA.py
services/: ai_service.py  pdf_processing_service.py
utils/: lang_tracing.py
